# dynamiq

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EFFICIENCY_REPORT.md  GROWTH.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  setup.cfg  test_jina.py
.cursor/: BUGBOT.md
.cursor/commands/: performance-review.md  performance-review.mdc  pre-pr-review.md  pre-pr-review.mdc  security-review.md
.cursor/rules/: security-review.mdc
.github/: CODEOWNERS
.github/workflows/: ci.yaml  integration-tests-with-creds.yaml  main.yaml  pr.yaml  publish.yml  smoke-tests.yaml
.skills/document_creator/: SKILL.md
.skills/hello-world/: SKILL.md
.skills/math_analytics_pipeline/: SKILL.md
.skills/presentation_creator/: SKILL.md
.skills/xlsx/: SKILL.MD  recalc.py
docs/: RFC-001-CHECKPOINT-RESUME.md
docs/design/: shared-browser-lease-fix.md
docs/rfc-001-checkpoint-resume/: 00-REVIEW-CHECKLIST.md  01-EXECUTIVE-SUMMARY.md  02-INDUSTRY-RESEARCH.md  03-RUNTIME-INTEGRATION.md  04-NODE-ANALYSIS.md  05-DATA-MODELS.md  06-STORAGE-BACKENDS.md  07-FLOW-INTEGRATION.md  08-TESTING-MIGRATION.md  09-UI-CHAT-INTEGRATION.md  README.md
docs/rfcs/: long-running-conversational-agent.md
docs/tutorials/: agents.md  quickstart.md  rag.md
dynamiq/: __init__.py
dynamiq/auth/: README.md  __init__.py  manager.py  models.py
dynamiq/browsers/: base.py
dynamiq/cache/: __init__.py  codecs.py  config.py  utils.py
dynamiq/callbacks/: __init__.py  auth.py  base.py  dynamiq.py  feedback.py  inner_thoughts_extractor.py  streaming.py  tracing.py
dynamiq/checkpoints/: __init__.py  checkpoint.py  config.py  types.py  utils.py
dynamiq/cli/: __init__.py  client.py  config.py
dynamiq/clients/: __init__.py  base.py  dynamiq.py
dynamiq/components/: serializers.py
dynamiq/connections/: __init__.py  agentcore.py  cloudflare_sandbox.py  connections.py  managers.py  storages.py
dynamiq/evaluations/: __init__.py  base_evaluator.py  llm_evaluator.py  python_evaluator.py
dynamiq/executors/: base.py  context.py  pool.py
dynamiq/flows/: __init__.py  base.py  flow.py
dynamiq/loaders/: yaml.py
dynamiq/memory/: __init__.py  agent_context.py  config.py  inner_memory.py  memory.py
dynamiq/nodes/: __init__.py  dry_run.py  exceptions.py  managers.py  node.py  schema_utils.py  types.py
dynamiq/ontology/: __init__.py  base.ttl  models.py  resolver.py  validators.py
dynamiq/prompts/: __init__.py  prompts.py
dynamiq/runnables/: __init__.py  base.py
dynamiq/sandbox/: __init__.py  base.py  e2b.py
dynamiq/sandboxes/: __init__.py  base.py  bedrock_agentcore.py  cloudflare.py  daytona.py  e2b.py  e2b_desktop.py  exceptions.py
dynamiq/serializers/: types.py
dynamiq/skills/: __init__.py  config.py  executor.py  ingestion.py  loader.py  models.py  registries.py  types.py  utils.py
dynamiq/types/: __init__.py  cancellation.py  constants.py  document.py  dry_run.py  feedback.py  file_output.py  llm_tool.py  message.py  streaming.py
dynamiq/utils/: __init__.py  chat.py  duration.py  embedding_validators.py  env.py  feedback.py  file_types.py  json_parser.py  jsonpath.py  logger.py  node_generation.py  utils.py
dynamiq/workflow/: workflow.py
examples/: Makefile  agent.py  llm_setup.py  paralle.py  test.py
examples/agents/: README.md  use_agents_custom_prompts.py  use_agents_hidden_params.py  use_agents_vision.py  use_react_wf.py  use_reflection_wf.py  use_simple_chat.py  use_simple_wf.py  use_streaming.py
examples/agents_article/: adaptive.py
examples/agents_use_cases/: README.md  agent_analyst_with_files.py  agent_company_analysis.py  agent_financial.py  agent_local.py  agent_searcher.py  agent_small_llm.py
examples/chainlit/: chainlit_agent.py  chainlit_rag.py  chainlit_react_agent.py  chainlit_server.py
examples/coda_tools/: agent_coda.py  agent_coda_dag.yaml  agent_coda_interactor.py
examples/converters/: csv_converter.py  html_converter.py  pypdf_converter.py
examples/customer_support_workflow/: README.md  bank_api.py  bank_api_sim.py  bank_rag_tool.py  main.py
examples/dag/: agent_dag_yaml.py  agent_memory_cycle_dag.py  agent_memory_dag.py  agent_memory_dag.yaml  agent_rag.py  agent_rag.yaml  agent_with_tool_params.yaml  csv_embedding_flow.py  csv_embedding_flow.yaml  dag.py  dag.yaml  dag_llm_structured_output.yaml  dag_yaml.py  simple_dag.py
examples/delete_documents/: api.py  example_api_usage.py  vector_storages.py
examples/embedders/: embedders_execution.py
examples/evaluation/: llm_evaluator.py  python_evaluator.py  workflow_eval.py
examples/financial_assistant/: financial_assistant.py
examples/graph_like/: code_assistant.ipynb  code_assistant.py  concierge_graph_orchestrator.py  concierge_orchestration.ipynb  concierge_orchestration.py  customer_support_graph_orchestrator.py  email_writer.py  graph_orchestrator_wf.yaml  graph_orchestrator_yaml.py  hierarchical_agent_teams.ipynb  hierarchical_agent_teams.py  simple_graph_orchestrator.py  trip_planner_graph_orchestrator.py  trip_planner_orchestration.ipynb  trip_planner_orchestration.py
examples/human_in_the_loop/: email_writer_assistant.py  writer_assistant.py
examples/intemediate_streaming/: agent.py  streamlit.py
examples/intermediate_streaming/: agent.py  streamlit.py
examples/job_posting/: README.md  use_planner.py
examples/kiroku_multiagent/: main.py  runner.py  states.py
examples/literature_overview/: README.md  use_orchestrator.py  use_planner.py
examples/llm/: dynamiq_client.py  function_calling.py  gemini.py  llm_client.py  perplexity_citations.py  streaming.py  structured_output.py
examples/llm_with_files/: llm_file_example.py  use_file_tool_example.py
examples/memory/: README.md  demo_article.py  demo_memory.py  (+7 more)
file/: __init__.py
roadmap/: 2026-07-framework-gap-analysis.md  2026-07-gap-inventory-appendix.md
scripts/: generate_mkdocs.py  run_openai_embedder_tests.py
search/: search_index.json
tests/: conftest.py
(+1907 files in other folders)
