[project]
name = "dynamiq"
version = "0.59.0"
description = "Dynamiq is an orchestration framework for agentic AI and LLM applications"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
authors = [
    { name = "Dynamiq Team", email = "hello@getdynamiq.ai" },
]
keywords = ["ai", "gpt", "agents", "rag", "llm", "generative-ai", "llmops"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jinja2>=3.1.6,<3.2.0",
    "pydantic>=2.12.5,<2.13.0",
    "openai>=1.83.0",
    "boto3>=1.34.34,<1.35.0",
    "redis>=5.0.0,<5.1.0",
    "google-cloud-aiplatform>=1.133.0,<2.0.0",
    "litellm>=1.83.7,<2.0.0",
    "requests>=2.32.5,<3.0.0",
    "RestrictedPython>=8.0,<8.1.0",
    "jsonpath-ng>=1.6.1,<1.7.0",
    "jsonpickle>=3.0.3,<3.1.0",
    "pinecone-client>=3.2.2,<3.3.0",
    "chromadb-client>=0.5.5.dev0,<0.6.0",
    "unstructured-client>=0.42.3,<0.43.0",
    "omegaconf>=2.3.0,<2.4.0",
    "weaviate-client>=4.20.4,<4.21.0",
    "filetype>=1.2.0,<1.3.0",
    "more-itertools>=10.3.0,<10.4.0",
    "pdf2image>=1.17.0,<1.18.0",
    "e2b-code-interpreter>=2.8.1,<3.0.0",
    "black>=26.3.1,<27.0.0",
    "pypdf>=6.10.2,<7.0.0",
    "python-pptx==1.0.2",
    "qdrant-client>=1.11.3,<1.12.0",
    "pymilvus>=2.5.6,<2.6.0",
    "psycopg[binary]>=3.2.3,<3.3.0",
    "pgvector>=0.3.6,<0.4.0",
    "mysql-connector-python>=9.1.0,<9.2.0",
    "snowflake-connector-python>=4.6.0,<5.0.0",
    "rapidfuzz>=3.11.0,<3.12.0",
    "sacrebleu>=2.5.1,<2.6.0",
    "rouge-score>=0.1.2,<0.2.0",
    "lxml>=6.1.0,<7.0.0",
    "elasticsearch>=8.12.0,<8.13.0",
    "numpy>=1.26.0,<1.27.0",
    "mcp>=1.23.0,<2.0.0",
    "datamodel-code-generator==0.30.0",
    "python-docx>=1.1.2,<2.0.0",
    "databricks-sql-connector>=4.0.3,<4.1.0",
    "orjson>=3.11.6,<4.0.0",
    "charset-normalizer>=3.4.2,<4.0.0",
    "tenacity==9.1.2",
    "regex>=2025.9.18,<2026.0.0",
    "requests-aws4auth>=1.3.1,<2.0.0",
    "opensearch-py>=3.0.0,<4.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "pdfplumber>=0.11.8,<0.12.0",
    "matplotlib>=3.10.7,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "pyyaml==6.0.1",
    "e2b>=2.26.0,<3.0.0",
    "tiktoken==0.12.0",
    "neo4j>=6.0.3,<7.0.0",
    "e2b-desktop>=2.2.0,<3.0.0",
    "beautifulsoup4>=4.12.3,<4.13.0",
    "markdown>=3.8.1,<4.0.0",
    "inscriptis==2.5.0",
    "stagehand>=0.4.0,<0.5.0",
    "pyOpenSSL>=26.0.0,<27.0.0",
    "steel-sdk==0.15.0",
    "reportlab>=4.3.0,<4.4.0",
    "daytona>=0.161.0,<0.162.0",
]

[project.optional-dependencies]
cua = ["cua-computer==0.4.19 ; python_version >= '3.12' and python_version < '3.14'"]
monty = ["pydantic-monty>=0.0.16,<0.0.17"]

[project.scripts]
dynamiq = "dynamiq.cli:main"

[project.urls]
homepage = "https://www.getdynamiq.ai"
repository = "https://github.com/dynamiq-ai/dynamiq"
documentation = "https://dynamiq-ai.github.io/dynamiq"

[dependency-groups]
dev = [
    "setuptools>=78.1.1,<78.2.0",
    "pre-commit>=3.7.0,<3.8.0",
    "pytest>=9.0.3,<10.0.0",
    "pytest-mock>=3.14.0,<3.15.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "coverage>=7.3.2,<7.4.0",
    "fakeredis>=2.21.3,<2.22.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "mkdocs>=1.6.0,<1.7.0",
    "mkdocs-material>=9.5.27,<9.6.0",
    "mkdocstrings>=0.25.1,<0.26.0",
    "mkdocstrings-python>=1.10.4,<1.11.0",
    "mkdocs-autorefs<1.4.0",
    "griffe<2.0.0",
    "requests-mock>=1.12.1,<1.13.0",
    "pytest-rerunfailures>=16.1,<17.0.0",
    "pytest-xdist>=3.8.0,<4.0.0",
    "pytest-timeout>=2.4.0,<3.0.0",
]
examples = [
    "fastapi>=0.116.1,<0.117.0",
    "uvicorn>=0.35.0,<0.36.0",
    "websockets>=15.0.0,<15.1.0",
    "sse-starlette>=2.1.0,<2.2.0",
    "httpx>=0.28.0,<0.29.0",
    "httpx-sse>=0.4.0,<0.5.0",
    "chainlit>=2.9.4,<3.0.0",
    "typer>=0.12.3,<0.13.0",
    "streamlit>=1.54.0,<2.0.0",
    "streamlit-date-picker>=0.0.3,<0.1.0",
    "streamlit-image-select>=0.6.0,<0.7.0",
    "streamlit-pdf-viewer>=0.0.14,<0.1.0",
    "weasyprint>=68.0,<69.0",
    "selenium>=4.21.0,<4.22.0",
    "tqdm>=4.66.4,<4.67.0",
    "sympy>=1.13.1,<1.14.0",
    "pygraphviz>=1.14,<1.15.0",
    "agentops>=0.3.12,<0.4.0",
    "langfuse>=2.51.2,<3.0.0",
    "peft>=0.13.0,<0.14.0",
    "pyarrow>=23.0.1,<24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dynamiq"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.isort]
line_length = 120

[tool.pytest.ini_options]
markers = [
    "smoke: slow, paid end-to-end production-scenario tests; run only via the `run-smoke-tests` label / `make test-smoke`",
    "integration: tests that exercise real integrations (may require credentials)",
    "unit: fast, isolated unit tests",
]
